# corr

./: .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
alembic/: env.py
alembic/versions/: 20260325_0001_initial_schema.py  20260325_0002_measurement_metadata.py  20260325_0003_analysis_runs.py  20260326_0004_component_shadow_tables.py
data_examples/: demo_case_c3_column.json  demo_case_c4.json  demo_case_c5_tube.json
data_examples/golden/: demo_case_c3_column.expected.json  (+2 more)
docs/: acceptance-suite.md  architecture.md  calculation-model.md  data-normalization-roadmap.md  domain-model.md  engineering-applicability.md  engineering-confidence.md  import_formats.md  limitations.md  migrations.md  ml-pipeline.md  ml-stage4-roadmap.md  mvp_spec.md  rate-fitting.md  reliability-roadmap.md  remediation_checklist.md  remediation_stage2.md  remediation_stage3.md  remediation_stage4.md  section-verification-stage4.md  section-verification.md
scripts/: run_acceptance_suite.py  run_demo_case.py  train_demo_model.py
tests/: conftest.py  test_acceptance_suite.py  test_api.py  test_capacity_basic.py  test_capacity_combined.py  test_capacity_enhanced.py  test_corrosion.py  test_db.py  test_hybrid.py  test_limit_state_refinement.py  test_ml_metadata_and_modes.py  test_rate_fit.py  test_rate_fit_diagnostics.py  test_report_payload_flags.py  test_report_warnings.py  test_section_reducer_monotonicity.py  test_section_verification.py  test_stage4_doctor_payload.py  test_uncertainty_band.py  test_units_normalization.py
(+25 files in other folders)
