[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resurs-corrosion-mvp"
version = "0.7.0"
description = "Baseline MVP for steel element corrosion and residual life assessment"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "alembic>=1.13,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pydantic>=2.6,<3.0",
    "numpy>=1.26,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "psycopg[binary]>=3.1,<4.0",
    "greenlet>=3.0,<3.2",
    "python-docx>=1.1,<2.0",
    "reportlab>=4.0,<5.0",
    "openpyxl>=3.1,<4.0",
    "pandas>=2.2,<3.0",
    "scikit-learn>=1.4,<2.0",
    "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
resurs_corrosion = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
